--- a/app.css
+++ b/app.css
@@ -7,7 +7,7 @@ body {
     color: #EA1C2C;
 }
 #mainNavbar .nav-link{
-    color: white;
+    color: #301934;
 }
 #mainNavbar .nav-link:hover{
     color: #EA1C2C;
@@ -16,6 +16,7 @@ body {
     font-size: 1.5rem;
     font-weight: 100;
 }
+
 #headings span {
 color: #EA1C2C;
 }
@@ -28,4 +29,18 @@ color: #EA1C2C;
         font-weight: 100;
         font-size: 2rem;
     }
+}
+.blurb h2 {
+    color:#EA1C2C;
+    font-weight:100;
+    font-size: 2.5rem;
+}
+.blurb p {
+    color: #f498b8;
+    font-weight: 100;
+    font-size: 1.125rem;
+    line-height: 2;
+}
+.content {
+    margin-top: 100px;
 }
